[package]
name = "vfront_tokendata_derive"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.28"
syn = { version = "1.0.74", features = ["extra-traits"]}
quote = "1.0.9"
itertools = "0.8.0"
