[package]
name = "vfront_verilog_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfront_basics = { path = "../vfront_basics" }
vfront_tokendata_derive = { path = "../vfront_tokendata_derive" }
phf = { version = "0.10", features = ["macros"] }

[dev-dependencies]
tempfile = "3.2.0"
